--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,7 @@
                             </feature-packs>
                             <layers>
                                 <layer>cloud-server</layer>
-                                <layer>jsf</layer>
+<!--                                <layer>jsf</layer>-->
                             </layers>
                             <filename>ROOT.war</filename>
                         </configuration>
